--- a/website_1/index.html
+++ b/website_1/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <footer>
+    <header>
         <h1>Het Griekse luilekkerleven</h1>
-    </footer>
+    </header>
     <nav>
         <ul>
             <li><a href="" class="menu">Kreta</a></li>
@@ -19,6 +19,7 @@
             <li><a href="" class="menu">Korfoe</a></li>
             <li><a href="" class="menu">Mykonos</a></li>
             <li><a href="" class="menu">Santorini</a></li>
+            peihfpejfpqeojfpoqjemfpof
         </ul>
     </nav>
     <article>
@@ -30,11 +31,11 @@
     <article>
         <img src="afbeeldingen/griekenland.jpg">
     </article>
-    <header>
+    <footer>
         <p><small>Dit is jullie eerste website</small></p>
 
-        
-    </header>
+
+    </footer>
 </body>
 
 </html>
