Updated Bootstrap exercises

--- a/bootstrap_oefeningen/oef1_bootstrap.html
+++ b/bootstrap_oefeningen/oef1_bootstrap.html
@@ -4,11 +4,16 @@
 <head>
     <meta charset=utf-8>
     <meta name="robots" content="all">
-    <title>Popup</title>
+    <title>Intro Bootstrap</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <p class="text-danger">Tekst</p>
+    <p class="text-danger">
+        Een zin met
+        meerdere woorden.
+    </p>   
 </body>
 
 </html>
